<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.ui.sidenavigation.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.app.ui.sidenavigation.setting.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.app.ui.sidenavigation.addlocation.AddLocationFragment"
        android:label="@string/menu_add_location"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/navigation_country_distance"
        android:name="com.app.ui.sidenavigation.countrydistance.CountryDistanceFragment"
        android:label="@string/menu_country_distance"
        tools:layout="@layout/fragment_country" />

    <fragment
        android:id="@+id/navigation_indoor"
        android:name="com.app.ui.sidenavigation.indoor.IndoorLocationsFragment"
        android:label="@string/menu_indoor_locations"
        tools:layout="@layout/indoor_location_fragment" />
    <fragment
        android:id="@+id/navigation_about"
        android:name="com.app.ui.sidenavigation.about.AboutFragment"
        android:label="@string/menu_indoor_locations"
        tools:layout="@layout/about_activity" />


</navigation>